--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "prisma generate",
     "dev": "concurrently -k -n frontend,backend -s all \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
-    "dev:backend": "nodemon -x \"node app/index.js\"",
+    "dev:backend": "nodemon -x \"node api/index.js\"",
     "build": "vite build",
     "preview": "vite preview",
     "migrate": "prisma migrate dev"
