--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:backend": "nodemon -x \"node api/index.js\"",
     "build": "vite build",
     "preview": "vite preview",
-    "migrate": "prisma migrate dev"
+    "migrate": "prisma migrate dev",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
