--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "concurrently -k -n frontend,backend -s all \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "vite",
-    "dev:backend": "nodemon -x \"node api/index.js\"",
+    "dev:frontend": "dotenv -e .env vite",
+    "dev:backend": "dotenv -e .env nodemon -x \"node api/index.js\"",
     "build": "vite build",
     "preview": "vite preview",
     "migrate": "prisma migrate dev",
@@ -17,30 +17,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "recharts": "^2.15.0",
+    "morgan": "^1.10.0",
+    "recharts": "^2.15.3",
     "sqlite3": "^5.1.7",
-    "swr": "^2.3.0"
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.20",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.9",
-    "postcss": "^8.4.49",
-    "prisma": "^6.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.15",
-    "tsx": "^4.7.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "dotenv-cli": "^8.0.0",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.3",
+    "prisma": "^6.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "vite": "^5.4.18"
   }
 }
