--- a/package.json
+++ b/package.json
@@ -5,44 +5,53 @@
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
     "postinstall": "prisma generate",
-    "dev": "concurrently -k -n frontend,backend -s all \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "dotenv -e .env vite",
-    "dev:backend": "dotenv -e .env nodemon -x \"node api/index.js\"",
+    "dev": "concurrently -i -r -k -n frontend,backend -s all \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "dotenv -e .env.local vite",
+    "dev:backend": "dotenv -e .env.local nodemon -x \"node api/index.js\"",
     "build": "vite build",
     "preview": "vite preview",
-    "migrate": "prisma migrate dev",
+    "migrate": "dotenv -e .env.local prisma migrate dev",
     "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.8.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "lucide-react": "^0.511.0",
     "morgan": "^1.10.0",
     "recharts": "^2.15.3",
     "sqlite3": "^5.1.7",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^4.17.22",
+    "@types/node": "^22.15.21",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "dotenv-cli": "^8.0.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
-    "prisma": "^6.6.0",
+    "prisma": "^6.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.3",
+    "tailwindcss": "^4.1.7",
+    "tsx": "^4.19.4",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
-    "vite": "^5.4.18"
+    "vite": "^5.4.19"
   }
 }
