--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,6 +37,7 @@
     "lucide-react": "^0.511.0",
     "morgan": "^1.10.0",
     "recharts": "^2.15.3",
+    "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.7",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
